css/style.css
/* ... */
h1 {
	font-size: 64px;
	font-family: 'Playfair Display', serif;
	text-transform: capitalize;
	color: #FFF;
}
h2 {
	font-size: 42px;
}
h3 {
	font-size: 32px;
	font-family: 'Playfair Display', serif;
}
h4 {
	font-size: 24px;
}
h5 {
	font-size: 22px;
}
h6 {
	font-size: 18px;
}
div.strong-emph {
	text-transform: uppercase;
	font-size: 12px;
	font-weight: 600;
}
a {
	text-decoration: none;
}
a.btn {
	max-width: 150px;
	background-color: #E39D23;
	border-radius: 888px;
	font-size: 14px;
	font-weight: bold;
	text-align: center;
	line-height: 23px;
	color: #FFFFFF;
	text-transform: capitalize;
	padding: 14px 8px;
	letter-spacing: 0.1px;
	margin: 0 auto;
	display: block;
}
.container {
	max-width: 1280px;
	width: 100%;
	margin: 0 auto;
	box-shadow: 0px 0px 25px rgba(85, 85, 85, 0.28);
}
.image-breaker {
	background-repeat: no-repeat;
	margin: 0 auto;
	width: 100%;
	max-width: 1280px;
	min-width: 300px;
}
.section-content {
	max-width: 894px;
    width: 100%;
	margin: 0 auto;
	padding-top: 75px;
	font-weight: 600;
}
.top-border {
	height: 2px;
	width: 500px;
	margin-bottom: 14px;
}
.no-scroll {
	position: fixed;
	overflow: hidden;
}
.border {
	margin: 0 auto;
	background: rgba(155,155,155,0.2);
	height: 2px;
	width: 100%;
}





/* Hero */
.hero {
	padding: 200px 0 0 0;
	background: url(../images/hero@2x.png);
	background-size: cover;
	background-repeat: no-repeat;
	background-position: center bottom;
	height: 63vh;
	min-height: 550px;
	max-height: 800px;
	position: relative;
}
.hero nav.mobile-nav, .hero .mobile-nav-menu {
	display: none;
}
.hero .mobile-nav-container .mobile-nav-menu ul li a {
	text-shadow: none;
}
.hero .mobile-nav-container .mobile-nav-menu ul li a:after {
	border-bottom: 3px solid #0f5c7a;
}
.hero div.title-content {
	margin-left: 32px;
	width: 505px;
}
.hero #title {
	background: url(../images/title@2x.png);
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	width: 505px;
	height: 77px;
	text-indent: -9999em;
	margin:0;
}
.hero h5 {
	color: #E39D23;
	text-transform: uppercase;
	text-align: center;
	font-weight: 600;
	line-height: 25px;
	margin-top: 7px;
}
.hero .btn:hover {
	background: #088B75;
	-webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    -ms-transition: all 0.5s ease;
    transition: all 0.5s ease;
}
.hero #menu {
	position: absolute;
	bottom: 0;
	margin: 0;
	width: 100%;
}
.hero #menu nav {
	text-align: center;
}
.hero #menu.fixed-nav {
	background: #FFF;
	position: fixed;
	top: 0;
	left: 0;
	z-index: 888;
	height: 30px;
	box-shadow: 0px 0px 5px rgba(85, 85, 85, 0.88);
}
.hero #menu.fixed-nav nav ul li a {
	color: #6F6F6F;
	text-shadow: none;
}
.hero ul {
	list-style-type: none;
    padding: 0;
}
.hero ul li {
	display: inline-block;
	margin: 0;
}
.hero ul a {
	font-size: 12px;
	font-weight: 600;
	color: #FFF;
	line-height: 18px;
	text-shadow: 0px 0px 5px rgba(85, 85, 85, 0.88);
	text-transform: uppercase;
	margin-left: 75px;
	position: relative;
	letter-spacing: 0.6px;
}
.hero ul li a:hover:after {
	width: 108%;
}
.hero ul li a:after {
	content: '';
	position: absolute;
	top: -4px;
	left: 0;
	width: 0%;
	border-bottom: 3px solid #088B75;
	transition: 0.4s;
}





/* About */
#about {
	background: #FFF;
	position: relative;
	padding-bottom: 45px;
}
#about .section-container {
	position: relative;
	max-width: 908px;
	width: 100%;
	background: url(../images/canadamap@2x.png);
	background-size: 647px 600px;
	background-repeat: no-repeat;
	background-position: center;
	margin: 0 auto;
}
#about .section-container .top-border {
	height: 8px;
	background-color: #E39D23;
	margin: 0 auto;
	display: block;
}
#about .section-container .about-heading {
	margin: 20px 0 70px 0;
	text-align: center;
}
#about .section-container .about-heading .globe {
	background: url(../images/globe@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: cover;
	height: 56px;
	width: 50px;
	display: inline-block;
	margin-right: 25px;
}
#about .section-container .about-heading h3 {
	text-transform: capitalize;
	display: inline-block;
	margin: 0;
	position: relative;
	top: -15px;
}
#about .section-container .profile {
	text-align: center;
	max-width: 368px;
    width: 100%;
	color: #4A4A4A;
	display: inline-block;
	vertical-align: top;
}
#about .section-container .profile.april {
	margin-right: 167px;
}
#about .section-container .profile.april .portrait {
	background: url(../images/aprilportrait@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	height: 342px;
	width: 327px;
}
#about .section-container .profile.chloe .portrait {
	background: url(../images/chloeportrait@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	height: 342px;
	width: 327px;
}
#about .section-container .profile h3 {
	text-transform: capitalize;
	margin: 10px 0 0 0;
	letter-spacing: 0.2px;
}
#about .section-container .profile p {
	text-align: justify;
	font-size: 14px;
	margin-top: 15px;
}
#about .section-container .profile.april .wedding-party .strong-emph {
	color: #088B75;
}
#about .section-container .profile.chloe .wedding-party .strong-emph {
	color: #E39D23;
}
#about .section-container .profile .wedding-party {
	margin-top: 35px;
	text-align: left;
}
#about .section-container .profile .wedding-party .person {
	margin-top: 13px;
	width: 42px;
	max-width: 46px;
	display: inline-block;
}
#about .section-container .profile .wedding-party .person.right {
	margin-left: 15px;
}
#about .section-container .profile .wedding-party .person p {
	font-size: 12px;
	text-transform: capitalize;
	text-align: center;
	margin: 2px 0 0 0;
}
#about .section-container .profile .wedding-party .person.karen .portrait {
	background: url(../images/karenportrait@2x.png);
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	height: 51px;
	width: 42px;
}
/* ... */

